--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+app {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+link.active {
+  color: red;
+}
